# qlc

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
.circleci/: config.yml
pkg/npm/: .gitignore  README.md  package.json
pkg/npm/lib/: download.js  index.d.ts  index.js  postinstall.js  typed-documentnode.d.ts
src/: cli.rs  graphql.rs  main.rs  typescript.rs  work.rs  worker_pool.rs
src/graphql/: document.rs  ir.rs  mod.rs  schema.rs  typescript.rs  variable.rs
src/graphql/schema/: field.rs  json.rs  mod.rs
src/typescript/: complex.rs  field.rs  fragment.rs  mod.rs  operation.rs  variable.rs
tests/: cli.rs  fs.rs  helpers.rs  mod.rs  schema.json  schema.rs  typescript.rs
tests/fixtures/cli/compile_with_importing_query_instead_of_fragment/: imported_query.graphql  main_query.graphql
tests/fixtures/cli/compile_with_missing_fragment/: importing_missing_query.graphql
tests/fixtures/cli/compile_with_narrowing/: host_fragment.graphql  narrow_query.graphql
tests/fixtures/cli/compile_with_use_show_deprecation_warnings/: with_deprecated_query.graphql
tests/fixtures/cli/run_with_unparseable_graphql/: unparseable.graphql
tests/fixtures/schema/compile_with_non_schema_matching_graphql/: bad_schema_query.graphql
tests/fixtures/schema_generation/: generate.mjs  package.json  schema.graphql
tests/fragments/: basic_document_bundle.graphql
tests/helpers/: cmd.rs  stdout_predicates.rs
tests/queries/: basic_meeting.graphql
tests/typescript/: complex.rs  enumeration.rs  external_fragment.rs  field.rs  interface.rs  mod.rs  parse_gql_tags.rs  union.rs  variable.rs
tests/typescript/complex/: interface.rs  mod.rs  union.rs
(+102 files in other folders)
