[package]
name = "qlc"
version = "0.6.1"
authors = ["Eric Kim-Butler <eric.butler@notarize.com>"]
edition = "2018"
license = "MIT"
autotests = false

[[test]]
name = "qlc"
path = "tests/mod.rs"

[dependencies]
colored = "2"
strsim = "0.10"
crossbeam-channel = "0.5"
graphql-parser = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2"
num_cpus = "1"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
assert_fs = "1"
