[package]
name = "qlc"
version = "2.0.0"
authors = ["Eric Kim-Butler <eric.butler@notarize.com>"]
edition = "2021"
license = "MIT"
autotests = false

[profile.dev]
split-debuginfo = "unpacked"

[[test]]
name = "qlc"
path = "tests/mod.rs"

[dependencies]
colored = "2"
strsim = "0.10"
crossbeam-channel = "0.5"
graphql-parser = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3", features = ["cargo"] }
num_cpus = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
assert_fs = "1"
