[package]
name = "qlc"
version = "2.2.0"
authors = ["Eric Kim-Butler <eric.butler@notarize.com>"]
edition = "2021"
license = "MIT"
autotests = false

[profile.dev]
split-debuginfo = "unpacked"

[[test]]
name = "qlc"
path = "tests/mod.rs"

[dependencies]
colored = "2"
strsim = "0.10"
crossbeam-channel = "0.5"
graphql-parser = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["default", "cargo", "derive"] }
num_cpus = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = { version = "2", features = ["color-auto"] }
assert_fs = "1"
globwalk = "0.8.1"
